--- a/FRONTEND/src/index.css
+++ b/FRONTEND/src/index.css
@@ -1,1 +1,3 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Winky+Sans:ital,wght@0,300..900;1,300..900&display=swap');
+
